Fix desktop layout spacing between elements

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,8 @@ img.close {
 div.main-article {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
+}
 }
 button {
   background-color: var(--softred);
@@ -112,12 +113,13 @@ div.new-article-list {
 
   display:flex;
   flex-direction: column;
+  justify-content: space-around;
   gap: 1.5rem;
 }
 div.new-article {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.75rem;
 }
 h2.new-header {
   font-size: 32px;
@@ -146,8 +148,9 @@ div.highlight-description {
   padding-right: 0.5rem;
   display:flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   width: 100%;
+  height: 100%;
   gap: 0.5rem;
 }
 h2.highlight-header {
@@ -156,9 +159,10 @@ h2.highlight-header {
 }
 
 footer {
-  padding-top: 2rem;
-  position: relative;
+  position: absolute;
   bottom: 0;
+  left: 0;
+  width: 100%;
 }
 .attribution {
     font-size: 11px;
@@ -180,6 +184,7 @@ footer {
     width: 72.75rem;
     padding-left: 2rem;
     padding-right: 2rem;
+    padding-top: 3rem;
   }
   /*Disable sidebar menu*/
   img.open, img.close {
@@ -208,6 +213,7 @@ footer {
     flex-direction: row;
     padding: 0;
     margin: auto;
+    gap: 3rem;
   }
 
   /*Swap to desktop layout*/
@@ -241,10 +247,14 @@ footer {
   div.main-article-text-button {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1.75rem;
   }
   h1 {
     font-size: 52px;
     line-height: 3.5rem;
+  }
+  div.new-article-list {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 }
